# RustRobotics

./: .gitignore  AGENTS.md  ARCH_REFACTOR_PLAN.md  Architecture.excalidraw  Cargo.toml  MUJOCO_LOG.TXT  README.md  WEB_EMBED_ARCH_PLAN.md  build_web.sh  build_web_glow.sh  build_web_wgpu.sh  graph_slam_debug_1063078.txt  package-lock.json  package.json  playwright.config.mjs  slam_landmarks_1769363919.csv  slam_log_1769363919.csv  start_server.sh
.github/workflows/: rust.yml
docs/: breezyslam-integration-plan.md  index.html  mujoco_runtime.js  ppo_trainer_worker.js  rust_robotics_sim.d.ts  rust_robotics_sim_bg.wasm.d.ts
docs/assets/mujoco/go2/: robust.json
docs/assets/mujoco/openduckmini/: asset_meta.json  duck.json  open_duck_mini_v2.xml  scene.xml
docs/embeds/: base.js  localization.js  path_planning.js  pendulum.js  robot.js  slam.js
examples/: Cargo.toml  inverted_pendulum_mpc_control.rs
rust_robotics_algo/: Cargo.toml
rust_robotics_algo/src/: lib.rs  util.rs
rust_robotics_algo/src/control/: lqr.rs  mod.rs
rust_robotics_algo/src/control/inverted_pendulum/: lqr.rs  mod.rs  mpc.rs  pid.rs
rust_robotics_algo/src/control/vehicle/: mod.rs
rust_robotics_algo/src/localization/: mod.rs  particle_filter.rs
rust_robotics_algo/src/mujoco/: duck.rs  go2.rs  mod.rs
rust_robotics_algo/src/path_planning/: astar.rs  dijkstra.rs  grid.rs  mod.rs  rrt.rs  theta_star.rs
rust_robotics_algo/src/robot_fw/: duck.rs  go2.rs  mod.rs  onnx.rs
rust_robotics_algo/src/slam/: ekf_slam.rs  graph_slam.rs  loop_closure.rs  marginalization.rs  mod.rs  robust_kernels.rs  sparse_solver.rs
rust_robotics_core/: Cargo.toml
rust_robotics_core/src/: lib.rs
rust_robotics_sim/: Cargo.toml  MUJOCO_ARCHITECTURE.md  MUJOCO_REMAINING_WORK.md  build.rs
rust_robotics_sim/assets/mujoco/go2/: facet.json
rust_robotics_sim/assets/mujoco/openduckmini/: BEST_WALK_ONNX.onnx
rust_robotics_sim/src/: app.rs  lib.rs  main.rs  mujoco_fw_web.rs  theme.rs  web_ppo_worker.rs
rust_robotics_sim/src/data/: adapter.rs  mod.rs
rust_robotics_sim/src/item/: cart.rs  ellipse.rs  mod.rs  rectangle.rs  vehicle.rs
rust_robotics_sim/src/simulator/: help.rs  localization.rs  mod.rs  mujoco.rs  path_planning.rs  pendulum.rs  runtime.rs  slam.rs
rust_robotics_sim/src/simulator/common/: error_tracking.rs  history.rs  mod.rs  noise.rs  ui_builders.rs  visualization.rs
rust_robotics_sim/src/simulator/mujoco/: mod.rs  native.rs  render_scene.rs  shared_layout.rs  shared_panel.rs  viewport_interaction.rs  wasm.rs
rust_robotics_sim/src/simulator/mujoco/native/: sim.rs
rust_robotics_sim/src/simulator/pendulum/: domain.rs  mod.rs  tests.rs  training.rs  ui.rs
rust_robotics_sim/src/simulator/ppo_trainer/: mod.rs  native.rs  web.rs
rust_robotics_sim/src/simulator/ui/: common.rs  mod.rs  modes.rs  pendulum.rs
rust_robotics_sim/web/: mujoco_runtime.js  ppo_trainer_bridge.js
rust_robotics_train/: Cargo.toml  README.md
rust_robotics_train/src/: algorithm.rs  backend.rs  env.rs  lib.rs  model.rs  trainer.rs
scripts/: build_docs_site.sh  publish_pages.sh  serve_docs.py
site_docs/: conf.py  core_concepts.md  getting_started.md  index.md  overview.md  quickstart.md  requirements.txt
site_docs/_static/: custom.css  sim_embed.js
site_docs/blog/: index.md
site_docs/blog/2026/: introduction.md
site_docs/tutorials/: index.md  localization.md  path_planning.md  pendulum.md  robot.md  slam.md
web_smoke/: rust_robotics.spec.mjs
