[package]
name = "rust_robotics_algo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# oorandom = {version="11.1"}
# heapless= {version="0.7"}
getrandom = {version="0.2", features = ["js"]}
rand = "0.8"
nalgebra = "0.30"
num-traits = "0.2"
nalgebra-numpy = {version="0.3", optional=true}
# Sparse matrix support for Graph SLAM
sprs = "0.11"
# nalgebra = {version="0.30", default_features=false, features=["libm","macros"]}
# num-traits = {version="0.2", default_features=false, features=["libm"]}
# nalgebra-numpy = {version="0.3.0", optional = true}

[dependencies.clarabel]
version = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies.clarabel]
version = "0.9"
features = ["wasm"]

[features]
default = []
numpy = ["nalgebra-numpy"] 
# libm = []


[package.metadata.docs.rs]
features = ["numpy"]
# features = ["numpy","libm"]
