[package]
name = "rust_robotics_algo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# oorandom = {version="11.1"}
# heapless= {version="0.7"}
getrandom = {version="0.2", features = ["js"]}
rand = "0.8"
nalgebra = "0.30"
num-traits = "0.2"
nalgebra-numpy = {version="0.3", optional=true}
serde = { version = "1", features = ["derive"] }
# Sparse matrix support for Graph SLAM
sprs = "0.11"
# nalgebra = {version="0.30", default_features=false, features=["libm","macros"]}
# num-traits = {version="0.2", default_features=false, features=["libm"]}
# nalgebra-numpy = {version="0.3.0", optional = true}

[dependencies.clarabel]
version = "0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "load-dynamic", "api-20", "alternative-backend"] }
libloading = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies.clarabel]
version = "0.9"
features = ["wasm"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.85"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "api-20", "alternative-backend"] }
ort-web = "0.2.1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"

[features]
default = []
numpy = ["nalgebra-numpy"] 
# libm = []


[package.metadata.docs.rs]
features = ["numpy"]
# features = ["numpy","libm"]
