[package]
name = "rust_robotics_sim"
default-run = "rust_robotics_sim_bin"
authors = ["Yongkyun Shin<yongkyuns@gmail.com>"]
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "rust_robotics_sim_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["web_wgpu_viewport"]
web_wgpu_viewport = []

[dependencies]
rust_robotics_algo = {version="0.1", path="../rust_robotics_algo"}
rand = "0.8"
chrono = { version = "0.4", features = ["js-sys", "wasmbind"] }
egui = "0.32.3"
egui_plot = "0.33.0"
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
serde_json = "1"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = ["Window", "Document", "HtmlCanvasElement", "Element", "HtmlElement", "HtmlIFrameElement", "Node", "Response"] }
wasm-bindgen = "0.2.108"
web-time = "1.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
eframe = { version = "0.32.3", features = ["persistence", "wgpu"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3.85"
getrandom = { version = "0.3", features = ["wasm_js"] }
eframe = { version = "0.32.3", default-features = false, features = ["persistence", "wgpu", "default_fonts", "web_screen_reader"] }
egui-wgpu = { version = "0.32.3", default-features = false, features = ["fragile-send-sync-non-atomic-wasm"] }
wgpu = { version = "25.0.0", default-features = false, features = ["webgpu"] }

[build-dependencies]
bindgen = "0.71"


#[profile.release]
#opt-level = 2 # fast and small wasm


#[patch.crates-io]
